--- a/appsettings.json
+++ b/appsettings.json
@@ -13,8 +13,8 @@
     "https://www.webapp.com"
   ],
   "JwtSettings": {
-    "ValidIssuer": "MonolithAPI",
-    "ValidAudience": "DemoWebApp",
+    "ValidIssuer": "WebAPI",
+    "ValidAudience": "WebApp",
     "SecurityKey": "dVnQuLBH4w6K5T5A4bj40KHiAKlW7y2d",
     "ExpiryInMinutes": 5
   },
